# tatsumaki

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.ja.md  README.md  SECURITY.md  biome.json  lefthook.yml  package.json
.agents/: AGENTS.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.codex/: config.toml
.config/: wt.toml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
agents/: clean-architecture-reviewer.toml  performance-reviewer.toml  security-reviewer.toml
apps/cli/crates/tm/: Cargo.toml
apps/cli/crates/tm/src/: desktop_ipc_client.rs  desktop_ipc_command.rs  main.rs
apps/cli/crates/tm/src/adapters/: config_store.rs  http_gateways.rs  mod.rs  token_store.rs
apps/cli/crates/tm/src/application/: ports.rs  service.rs
apps/cli/crates/tm/src/infrastructure/: config_file.rs  http_client.rs  keyring_store.rs  mod.rs
docs/: adr-guide.md  agent-custom-linter-strategy.md  agent-integrations.md  completion-gate.md  config-guard.md  desktop-app.md  knowledge-index.md  lint-error-message-template.md  local-cloudflare-access-setup.md  pivotal-tracker-ui-specification.ja.md  story-delete-and-timeline-entries.md  ui-screenshot-test-guide.md  web-e2e-strategy.md
scripts/: agent-custom-lint-test.sh  agent-custom-lint.sh  check-docs-links.sh  check-skill-links.sh  cli-release-upload.sh  completion-gate.sh  config-guard.sh  config-guard.test.sh  hook-agent-custom-lint.sh  hook-migration-guard.sh  hook-require-signed-commits.sh  install-tm.sh  lint-screenshot-coverage.sh  (+3 more)
(+536 files in other folders)
