[package]
name = "tm"
version = "0.0.7"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "form", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
url = "2"
dirs = "6"
tokio = { version = "1", features = ["macros", "rt"] }
progenitor = "0.14"
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"] }
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"
webbrowser = "1.0"
urlencoding = "2.1"
async-trait = "0.1"
semver = "1"
tabled = "0.21"
regress = "0.11"
